--- a/66.Seq2Seq-Attention.ipynb
+++ b/66.Seq2Seq-Attention.ipynb
@@ -142,7 +142,9 @@
     "\n",
     "        for x in X:\n",
     "            # hiddens_state[-1] 上一个时刻 encoder rnn 最后一层的输出\n",
-    "            # query的形状为(batch_size,1,num_hiddens)\n",
+    "            #   -> hidden_state大小为(num_layers, batch_size, num_hiddens)。\n",
+    "            #   -> 取最后一层 (batch_size, num_hiddens)\n",
+    "            # query的形状为(batch_size, 1, num_hiddens)\n",
     "            query = torch.unsqueeze(hidden_state[-1], dim=1)\n",
     "            \n",
     "            # def forward(self, queries, keys, values, valid_lens):\n",
